Angular separat von Spring

--- a/carSharingNow/carSharingNow.zip_expanded/angularclient/angular.json
+++ b/carSharingNow/carSharingNow.zip_expanded/angularclient/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "frontend-angular-app": {
+    "angularclient": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/frontend-angular-app",
+            "outputPath": "dist/angularclient",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "frontend-angular-app:build:production"
+              "browserTarget": "angularclient:build:production"
             },
             "development": {
-              "browserTarget": "frontend-angular-app:build:development"
+              "browserTarget": "angularclient:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +75,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "frontend-angular-app:build"
+            "browserTarget": "angularclient:build"
           }
         },
         "test": {
