--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/pom.xml
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/pom.xml
@@ -73,13 +73,20 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		
    		<dependency>
         	<groupId>com.vaadin</groupId>
         	<artifactId>vaadin-spring-boot-starter</artifactId>
         	<version>${vaadin.version}</version>
-    	</dependency>	
+    	</dependency>
+    	
+    	 <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-resource-server</artifactId>
+        </dependency>	
 	</dependencies>
 	
 	
