--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.security.user.name=test
 spring.security.user.password=test
 
 jwt.auth.secret=J6GOtcwC2NJI1l0VkHu20PacPFGTxpirBxWwynoHjsc=
+jwt.expirationDateInMs = 300000
