--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/pom.xml
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/pom.xml
@@ -58,7 +58,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.3.Final</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
