ssl und sauber machen

--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-server.port=${PORT:8080}
+server.port=8008
 vaadin.urlMapping=/*
 
 spring.security.user.name=test
@@ -11,3 +11,7 @@ spring.security.user.password=test
 
 jwt.auth.secret=J6GOtcwC2NJI1l0VkHu20PacPFGTxpirBxWwynoHjsc=
 jwt.expirationDateInMs = 300000
+
+server.ssl.key-store=classpath:key-cert-mousumi.p12
+server.ssl.key-store-password=changeit
+server.ssl.keyStoreType=PKCS12
