--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cSnDB
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=dave
+spring.datasource.password=keks
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-server.port=8008
+server.port=8080
 vaadin.urlMapping=/*
 
-spring.security.user.name=test
-spring.security.user.password=test
 
 jwt.auth.secret=J6GOtcwC2NJI1l0VkHu20PacPFGTxpirBxWwynoHjsc=
 jwt.expirationDateInMs = 300000
