--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://carSharingNowDB:3306/cSnDB
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=dave
+spring.datasource.password=keks
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port=8443
