Adminboard is drin fehlt nur auto hinzufügen

--- a/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
+++ b/carSharingNow/carSharingNow.zip_expanded/carSharingNow/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://carSharingNowDB:3306/cSnDB
-spring.datasource.username=dave
-spring.datasource.password=keks
+spring.datasource.url=jdbc:mysql://localhost:3306/cSnDB
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port=8443
@@ -8,7 +8,7 @@ vaadin.urlMapping=/*
 
 
 jwt.auth.secret=J6GOtcwC2NJI1l0VkHu20PacPFGTxpirBxWwynoHjsc=
-jwt.expirationDateInMs = 300000
+
 
 server.ssl.key-store=classpath:key-cert-mousumi.p12
 server.ssl.key-store-password=changeit
